- small style fixes - fixed user page not being scrollable when overflowing - started the add project page

--- a/src/components/form/LoginForm.css
+++ b/src/components/form/LoginForm.css
@@ -1,4 +1,4 @@
-form {
+form#login-form {
     background-color: var(--blue-300);
     border-radius: 10px;
     width: 30%;
@@ -39,7 +39,7 @@ form {
     padding: 2em 2em;
 }
 
-input {
+input[type="text"], input[type="password"] {
   padding: 0.4em 0.8em;
   border-radius: 4px;
   border: none;
