--- a/src/global.css
+++ b/src/global.css
@@ -21,3 +21,7 @@
 ::-webkit-scrollbar-track {
     background-color: transparent;
 }
+
+.scrollable {
+    overflow-y: auto ;
+}
